--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
       <script src="ground.js"></script>
       <script src="square.js"></script>
       <script src="sling.js"></script>
-      <script src="polygon.js"></script>
+      <script src="POLYGON.JS"></script>
 
 </body></html>
